--- a/scss/_hombre.scss
+++ b/scss/_hombre.scss
@@ -97,10 +97,23 @@ section#sectionGlobal {
         justify-content: center;
         margin-bottom: 10rem;
         div.divProductos-1 {
+            display: flex;
+            flex-direction: column;
             box-shadow: 0rem 0rem 0.5rem 0.5rem rgba(0, 0, 0, 0.071);
             &:hover {
                 transition: 1s;
                 transform: scale(1.01);
+            }
+            a.boton {
+                background-color: black;
+                border-color: white;
+                font-size: 1rem;
+                &:hover {
+                    transition: 1s;
+                    background-color: rgb(219, 219, 219);
+                    border-color: white;
+                    color: rgba(0, 0, 0, 0.678);
+                }
             }
         }
     }
@@ -108,23 +121,10 @@ section#sectionGlobal {
 
 
 
-a.boton {
-    background-color: black;
-    border-color: white;
-    font-size: 1rem;
-    &:hover {
-        transition: 1s;
-        background-color: rgb(219, 219, 219);
-        border-color: white;
-        color: rgba(0, 0, 0, 0.678);
-    }
-}
-
-
 div.divProdAgregados {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 5rem;
     img.imgProdAgregados {
@@ -168,7 +168,7 @@ a.a-FinalizarCompra {
     justify-content: center;
     button#finalizarCompra {
         color: white;
-        background-color: rgba(0, 255, 8, 0.588);
+        background-color: rgba(44, 218, 0, 0.616);
         display: flex;
         justify-content: center;
         align-items: center;
